Finish_CRUD_CAT_BOOK_USER

--- a/src/app/Components/Blocks/left-sidebar/left-sidebar.component.html
+++ b/src/app/Components/Blocks/left-sidebar/left-sidebar.component.html
@@ -3,13 +3,15 @@
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li class="kaka nav-small-cap menu"><i class="fa fa-list-alt icon-new" aria-hidden="true"> <span
-                            id="text-left-sidebar"><a id="new-tag" href="./home/book">BOOKS CATEGORY</a></span>
+                            id="text-left-sidebar"><a id="new-tag" href="./home/cate">BOOKS CATEGORY</a></span>
                     </i>
                 </li>
-                <li class="kaka nav-small-cap menu"><i class="fa fa-list-alt icon-new" aria-hidden="true"> <span
+                <li class="kaka nav-small-cap menu"><i class="fa fa-book icon-new" aria-hidden="true"> <span
                             id="text-left-sidebar"><a id="new-tag" href="./home/book">BOOKS</a></span> </i></li>
-                <li class="kaka nav-small-cap menu"><i class="fa fa-list-alt icon-new" aria-hidden="true"> <span
+                <li class="kaka nav-small-cap menu"><i class="fa fa-user icon-new" aria-hidden="true"> <span
                             id="text-left-sidebar"><a id="new-tag" href="./home/user">USERS</a></span> </i></li>
+                <!-- <li class="kaka nav-small-cap menu"><i class="fa fa-trash icon-new" aria-hidden="true"> <span
+                            id="text-left-sidebar"><a id="new-tag" href="./home/user">GARBAGE</a></span> </i></li> -->
             </ul>
         </nav>
     </div>
