--- a/src/app/Components/Blocks/topbar/topbar.component.html
+++ b/src/app/Components/Blocks/topbar/topbar.component.html
@@ -8,16 +8,16 @@
                 <!-- Logo icon --><b>
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                     <!-- Dark Logo icon -->
-                    <img src="../assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                    <!-- <img src="../assets/images/logo-icon.png" alt="homepage" class="dark-logo" /> -->
                     <!-- Light Logo icon -->
-                    <img src="../assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                    <img style="width: 82px;" src="../assets/images/logo.jpg" alt="homepage" class="light-logo" />
                 </b>
                 <!--End Logo icon -->
                 <!-- Logo text --><span>
                     <!-- dark Logo text -->
-                    <img src="../assets/images/new-logo.png" alt="homepage" class="dark-logo" />
                     <!-- Light Logo text -->
-                    <img src="../assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span> </a>
+                    <h5 style="padding-left: 85px;margin-top: -52px;">Book Store</h5>
+                </span> </a>
         </div>
         <!-- ============================================================== -->
         <!-- End Logo -->
@@ -36,11 +36,7 @@
                 <!-- ============================================================== -->
                 <!-- Search -->
                 <!-- ============================================================== -->
-                <li class="nav-item" style="margin-top: 15px;">
-                    <form class="app-search d-none d-md-block d-lg-block">
-                        <input type="text" class="form-control" placeholder="Search & enter">
-                    </form>
-                </li>
+
             </ul>
             <!-- ============================================================== -->
             <!-- User profile and search -->
