--- a/src/app/Components/Blocks/topbar/topbar.component.html
+++ b/src/app/Components/Blocks/topbar/topbar.component.html
@@ -304,9 +304,8 @@
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown u-pro">
                     <a class="my-name-new nav-link dropdown-toggle waves-effect waves-dark profile-pic" href=""
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img
-                            src="../assets/images/users/1.jpg" alt="user" class=""> <span
-                            class="hidden-md-down">{{displayName}}
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img style="width: 60px;
+    height: 52px;" [src]="Image" alt="user" class=""> <span class="hidden-md-down">{{displayName}}
 
                             &nbsp;<i class="fa fa-angle-down"></i></span> </a>
                     <div class="dropdown-menu dropdown-menu-right animated flipInY">
