--- a/src/app/Components/Pages/detail/detail.component.html
+++ b/src/app/Components/Pages/detail/detail.component.html
@@ -1,4 +1,4 @@
-<h1>Customers</h1>
+<!-- <h1>Customers</h1>
 <div *ngFor="let user of users" style="width: 300px;">
     <div *ngIf="user">
         <div>
@@ -25,4 +25,4 @@
 </div>
 <div style="margin-top:20px;">
     <button type="button" class="button btn-danger" (click)='deleteCustomers()'>Delete All</button>
-</div>
+</div> -->
